# C-DataStructures-Library

./: .gitignore  .travis.yml  README.md
C-DataStructures-Library/: CMakeLists.txt  main.c
C-DataStructures-Library/benchmarks/: AVLTreeBench.c  AssociativeListBench.c  HeapBench.c  RedBlackTreeBench.c  main.c
C-DataStructures-Library/generic/include/: GCore.h  GQueue.h
C-DataStructures-Library/generic/src/: GQueue.c
C-DataStructures-Library/include/: AVLTree.h  Array.h  AssociativeList.h  Benchmarks.h  BinarySearchTree.h  BitArray.h  CircularBuffer.h  CircularLinkedList.h  Core.h  CoreSort.h  CoreTree.h  Deque.h  DequeArray.h  DequeList.h  DoublyLinkedList.h  DynamicArray.h  Heap.h  Interface.h  PriorityList.h  PriorityQueue.h  Queue.h  QueueArray.h  QueueList.h  RedBlackTree.h  SinglyLinkedList.h  SortedList.h  Stack.h  StackArray.h  StackList.h  Tests.h
C-DataStructures-Library/include/core/: Benchmarks.h  Core.h  Tests.h
C-DataStructures-Library/interface/: Interface.c  Interface.h  README.md
C-DataStructures-Library/src/: AVLTree.c  Array.c  AssociativeList.c  BinarySearchTree.c  BitArray.c  CircularBuffer.c  CircularLinkedList.c  Deque.c  DequeArray.c  DequeList.c  DoublyLinkedList.c  DynamicArray.c  Heap.c  Interface.c  PriorityList.c  PriorityQueue.c  Queue.c  QueueArray.c  QueueList.c  RedBlackTree.c  SinglyLinkedList.c  SortedList.c  Stack.c  StackArray.c  StackList.c
C-DataStructures-Library/tests/: AVLTreeTests.c  ArrayTests.c  AssociativeListTests.c  BinarySearchTreeTests.c  BitArrayTests.c  CircularLinkedListTests.c  DequeArrayTests.c  DequeListTests.c  DequeTests.c  DoublyLinkedListTests.c  DynamicArrayTests.c  HeapTests.c  PriorityListTests.c  QueueArrayTests.c  QueueListTests.c  QueueTests.c  RedBlackTreeTests.c  SinglyLinkedListTests.c  SortedListTests.c  StackArrayTests.c  StackListTests.c  StackTests.c  main.c
C-DataStructures-Library/tests/UnitTest/: UnitTest.c  UnitTest.h
C-DataStructures-Library/util/include/: CString.h  Chars.h  Clock.h  Floats.h  Integers.h  Random.h  Status.h  Util.h  Utility.h
C-DataStructures-Library/util/src/: CString.c  Chars.c  Clock.c  Floats.c  Integers.c  Random.c  Status.c  Utility.c
doxygen/: .gitignore  Doxyfile  Doxygen
doxygen/pages/: mainpage.md  pages.md
